--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,22 @@
       <artifactId>spring-webmvc</artifactId>
       <version>4.3.5.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>4.3.6.release</version>
+    </dependency>
+    <dependency>
+      <groupId>freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.9</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker-gae</artifactId>
+      <version>2.3.25-incubating</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>antibioticdemo1</finalName>
