--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
       <artifactId>spring-context-support</artifactId>
       <version>4.3.6.release</version>
     </dependency>
+
     <dependency>
       <groupId>freemarker</groupId>
       <artifactId>freemarker</artifactId>
@@ -38,7 +39,17 @@
       <artifactId>freemarker-gae</artifactId>
       <version>2.3.25-incubating</version>
     </dependency>
+
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.0-b05</version>
+    </dependency>
   </dependencies>
+
+
+
   <build>
     <finalName>antibioticdemo1</finalName>
   </build>
