Add rapid framework to extend FreeMarker.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
       <version>4.3.6.release</version>
     </dependency>
 
+    <!--rapid framework模板需要的jar包-->
     <dependency>
       <groupId>freemarker</groupId>
       <artifactId>freemarker</artifactId>
@@ -40,6 +41,24 @@
       <version>2.3.25-incubating</version>
     </dependency>
 
+    <!--freemarker相关的jar包-->
+    <dependency>
+      <groupId>com.googlecode.rapid-framework</groupId>
+      <artifactId>rapid-core</artifactId>
+      <version>4.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
+    <!--neo4j-jdbc-->
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-jdbc</artifactId>
+      <version>3.0.1</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
