--- a/pom.xml
+++ b/pom.xml
@@ -53,23 +53,67 @@
       <version>2.6</version>
     </dependency>
 
-    <!--neo4j-jdbc-->
+    <!--Mybatis相关-->
     <dependency>
-      <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-jdbc</artifactId>
-      <version>3.0.1</version>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.3.1</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.ibatis</groupId>
+      <artifactId>ibatis-sqlmap</artifactId>
+      <version>3.0-beta-10</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
     </dependency>
 
+
+
+    <!--MySQL driver-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>6.0.5</version>
+    </dependency>
+
+    <!--jdbc-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.8.RELEASE</version>
+      <type>pom</type>
+    </dependency>
+
+    <!--servlet/jsp api start-->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>4.0.0-b05</version>
     </dependency>
-  </dependencies>
 
+  </dependencies>
 
 
   <build>
     <finalName>antibioticdemo1</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.3.5</version>
+      </plugin>
+    </plugins>
   </build>
+
+
+
 </project>
