--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,13 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>4.3.5.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
-      <version>4.3.6.release</version>
+      <version>4.3.5.release</version>
     </dependency>
 
     <!--rapid framework模板需要的jar包-->
@@ -76,6 +81,40 @@
       <version>4.12</version>
     </dependency>
 
+    <!--json相关-->
+    <!--<dependency>-->
+      <!--<groupId>org.codehaus.jackson</groupId>-->
+      <!--<artifactId>jackson-core-asl</artifactId>-->
+      <!--<version>1.9.11</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.codehaus.jackson</groupId>-->
+      <!--<artifactId>jackson-mapper-asl</artifactId>-->
+      <!--<version>1.9.11</version>-->
+      <!--<type>pom</type>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>com.fasterxml.jackson.jr</groupId>-->
+      <!--<artifactId>jackson-jr-all</artifactId>-->
+      <!--<version>2.4.3</version>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.6.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.6.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.6.5</version>
+    </dependency>
 
 
     <!--MySQL driver-->
@@ -106,6 +145,7 @@
   <build>
     <finalName>antibioticdemo1</finalName>
     <plugins>
+      <!--MyBatis逆向工程-->
       <plugin>
         <groupId>org.mybatis.generator</groupId>
         <artifactId>mybatis-generator-maven-plugin</artifactId>
