ApiController.java: finish the api of get single entity.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,22 @@ hs_err_pid*
 /.~lock.凯琦_抗生素开源系统简介.docx#
 /src/main/webapp/files/
 /src/main/webapp/WEB-INF/index.html
+others/
+src/main/webapp/WEB-INF/VIEW/
+src/main/webapp/images/
+src/main/webapp/resources/
+src/main/webapp/template/
+/others/
+/others/sqlFiles/openKG_symptom.sql
+/others/sqlFiles/openKG_symptom_type.sql
+/others/sqlFiles/openKG_complication.sql
+/others/sqlFiles/alldata.sql
+/others/sqlFiles/openKG_infection_site.sql
+/others/sqlFiles/openKG_antibioticKG_index.sql
+/others/sqlFiles/openKG_disease.sql
+/others/sqlFiles/openKG_relation.sql
+/others/sqlFiles/openKG_situation.sql
+/others/sqlFiles/openKG_bacteria.sql
+/others/sqlFiles/openKG_antibiotic.sql
+/others/sqlFiles/openKG_edge_in_KG.sql
+/others/TestCases/apiTest.md
