--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,21 @@
       <version>4.0.0-b05</version>
     </dependency>
 
+      <!--map2json-->
+      <dependency>
+          <groupId>net.sf.json-lib</groupId>
+          <artifactId>json-lib</artifactId>
+          <version>2.4</version>
+          <classifier>jdk15</classifier>
+      </dependency>
+
+      <!--加入对commons-io的依赖-->
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.4</version>
+      </dependency>
+
   </dependencies>
 
 
@@ -153,6 +168,7 @@
       </plugin>
     </plugins>
   </build>
+
 
 
 
